[package]
name = "rename-by-exif"
version = "0.1.0"
authors = ["Ryusuke SEKIYAMA <rsky0711@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
clap = "2.33"
kamadak-exif = "0.3"
